# scorebook

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CONCERNS_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  adaptive-dataset-splits.md  evaluate_refactor_plan.md  evaluate_refactor_plan_CORRECTED.md  plan.md  pydoc-generate.py  pydoc-markdown.yaml  pyproject.toml  refactor_plan_review.md  run_unasync.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: change.md  release.md
.github/workflows/: ci.yml  extended-tests.yml  gitleaks.yml  integration-tests.yml  publish-api-docs.yml  publish-to-pypi.yml  publish-to-testpypi.yml
docs/pydocs/: cli.md  eval_dataset.md  evaluate.md  exceptions.md  inference.md  inference_pipeline.md  metrics.md  sidebar.json  trismik_services.md  types.md  utils.md
docs/pydocs/cli/: auth.md  main.md
docs/pydocs/inference/: bedrock.md  openai.md  portkey.md  vertex.md
docs/pydocs/metrics/: accuracy.md  metric_base.md  metric_registry.md  precision.md
docs/pydocs/trismik_services/: adaptive_testing_service.md  login.md  upload_classic_eval_run.md
docs/pydocs/utils/: async_utils.md  build_prompt.md  io_helpers.md  jinja_helpers.md  mappers.md  progress_bars.md  transform_helpers.md
examples/: README.md  __init__.py  adaptive_testing_intro.ipynb  basic_example.py  basic_run.py  colab_notebook.ipynb  data.csv  example_10_score_function.py  example_1_simple_eval.py  example_1_simple_evaluation.py  example_2.1_evaluation_datasets.py  example_2.2_evaluation_datasets.py  example_2_evaluation_datasets.py  example_2_inference_pipelines.py  example_3_cloud_inference.py  example_3_hyperparameter_sweeps.py  example_3_inference_pipelines.py  example_3_loading_huggingface_datasets.py  example_4_batch_inference.py  example_4_cloud_inference.py  example_4_hyperparameter_sweeps.py  example_4_loading_huggingface_datasets.py  example_5_cloud_inference.py  example_5_hyperparameter_sweeps.py  example_6_cloud_batch_inference.py  example_6_cloud_big_batch_inference.py  example_6_submitting_eval_results.py  example_7_adaptive_eval.py  example_7_cloud_batch_inference.py  example_7_hyperparameters.py  example_7_local_batch_inference.py  example_7_submitting_eval_results.py  example_8_adaptive_eval.py  example_8_local_batch_inference.py  example_8_uploading_results.py  example_9_adaptive_eval.py  example_9_adaptive_evaluation.py  hyperparam_sweep.py  hyperparameter_sweeping.py  openai_batch.py  (+4 more)
examples/demo_results/: openai_responses_output.json  output.json  sweep_output.json
examples/example_datasets/: dataset.csv  dataset.json
examples/example_helpers/: args_parser.py  output.py  setup.py
examples/example_results/: example_1_output.json  example_2_output.json  example_3_output.json  example_4_output.json  example_5_output.json  example_6_output.json
examples/example_yaml_configs/: Cais-MMLU.yaml  TIGER-Lab-MMLU-Pro.yaml
examples/providers/: __init__.py
examples/providers/aws/: batch_example.py
examples/providers/portkey/: batch_example.py  messages_example.py
examples/providers/vertex/: __init__.py  batch_example.py  messages_example.py
examples/results/: basic_run_results.csv  basic_run_results.json
scripts/: clean_examples.py  generate_sync.py  run_examples.py
src/: __init__.py
src/scorebook/: __init__.py  eval_dataset.py  evaluate.py  evaluator.py  exceptions.py  inference_pipeline.py  settings.py  types.py
src/scorebook/cli/: __init__.py  auth.py  main.py
src/scorebook/dashboard/: __init__.py  create_project.py  credentials.py  upload_results.py
src/scorebook/datasets/: __init__.py  csv_loader.py  dataset.py  hf_loader.py  json_loader.py
src/scorebook/eval_datasets/: __init__.py  eval_dataset.py
src/scorebook/evaluate/: __init__.py  evaluate_helpers.py
src/scorebook/inference/: __init__.py  inference_pipeline.py  openai.py  portkey.py  vertex.py
src/scorebook/loaders/: __init__.py  csv_loader.py  hf_loader.py  json_loader.py
src/scorebook/metrics/: README.md  __init__.py  accuracy.py  bertscore.py  bleu.py  exactmatch.py  f1.py  get_metrics.py  metric_base.py  metric_registry.py  precision.py  recall.py  rouge.py  rouge1.py  rougel.py
src/scorebook/replay/: __init__.py
src/scorebook/score/: __init__.py  score_helpers.py
src/scorebook/trismik/: __init__.py  (+4 more)
tests/: README.md  conftest.py  test_accuracy.py  test_async_evaluate.py  test_basic.py  test_build_prompt.py  test_eval_dataset.py  test_evaluate.py  test_evaluate_inference_function.py  test_examples.py  test_loaders.py  test_login.py  test_metric_registry.py
tests/data/: Dataset.csv  Dataset.json  DatasetDict.json  dataset_template.yaml
tests/extended/: test_bertscore.py  test_extended_basic.py
tests/fixtures/: mock_hf_datasets.py  mock_trismik.py
tests/integration/: __init__.py
tests/metrics_cpu/: test_f1.py  test_precision.py  test_recall.py  test_rouge1.py  test_rougel.py
tests/metrics_gpu/: __init__.py  test_bertscore.py
tests/optional/: __init__.py
tests/results/: evaluation_results.csv
tests/test_dashboard/: test_login.py
tests/test_eval_datasets/: test_eval_dataset.py
tests/test_evaluate/: test_adaptive_evaluation.py  test_async_evaluate.py  test_evaluate.py  test_evaluate_async.py  test_evaluate_inference_function.py
tests/test_metrics/: test_bleu.py  test_metric_registry.py  test_rouge.py
tests/test_score/: test_score.py  test_score_async.py
tests/test_trismik/: test_login.py
tests/test_trismik_services/: test_login.py  test_upload_classic_eval_run.py
tests/test_utils/: test_build_prompt.py  test_render_template.py
tests/unit/: __init__.py  conftest.py  test_basic.py  test_exceptions.py
tutorials/: README.md  __init__.py
tutorials/metrics/: bleu.py
tutorials/notebooks/: 1-scoring.ipynb  2-evaluating.ipynb  3-adaptive_evaluation.ipynb  3.1-adaptive_evaluation_phi.ipynb  3.2-adaptive_evaluation_gpt.ipynb  4-uploading_results.ipynb
tutorials/quickstarts/: getting_started.ipynb  scorebook_demo.ipynb
tutorials/utils/: mock_llm.py  setup.py
(+110 files in other folders)
